--- a/resume/index.html
+++ b/resume/index.html
@@ -3,7 +3,12 @@
 
   <head>
     <title>Jenna Cohen Resume</title>
+
+    <link rel="stylesheet" type= "text/css" href="style.css" >
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
+
   </head>
+
   <body>
 
     <!-- I built this myself! -->
@@ -12,7 +17,7 @@
 
     <strong>Journalism Student</strong>
     <br>
-    <img src="cohen.jpg" width=300px>
+    <!--<img src="cohen.jpg" width=300px> -->
 
     <ul>
         <li> <a href = "mailto:jennaco@terpmail.umd.edu"> Email Me </a></li>
