--- a/resume/index.html
+++ b/resume/index.html
@@ -6,54 +6,56 @@
 
     <link rel="stylesheet" type= "text/css" href="style.css" >
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
 
+    <div id = "container">
+
     <!-- I built this myself! -->
 
-    <h1>Jenna Cohen</h1>
+    <div id = "name"> Jenna Cohen </div>
 
-    <strong>Journalism Student</strong>
+    <div id = "title">Journalism Student</div>
     <br>
     <!--<img src="cohen.jpg" width=300px> -->
 
-    <ul>
-        <li> <a href = "mailto:jennaco@terpmail.umd.edu"> Email Me </a></li>
-        <li> <a href = "https://www.linkedin.com/in/jenna-cohen-037a4a185/">LinkedIn</a>  </li>
-        <li> <a href = "https://twitter.com/jennaco370"> Twitter </a> </li>
-        <li> <a href = "https://github.com/jennacohen"> GitHub </a></li>
+    <ul class = "menu">
+        <li class = "menu"> <a href = "mailto:jennaco@terpmail.umd.edu"> Email Me </a></li>
+        <li class = "menu"> <a href = "https://www.linkedin.com/in/jenna-cohen-037a4a185/">LinkedIn</a>  </li>
+        <li class = "menu"> <a href = "https://twitter.com/jennaco370"> Twitter </a> </li>
+        <li class = "menu"> <a href = "https://github.com/jennacohen"> GitHub </a></li>
     </ul>
 
-    <p>
+    <p class= "top">
       I am a journalism student studying at the University of Maryland, College Park. My strengths include video production and implementing UX strategies, as well as data and design skills. I will be using my concentration in information science to enhance my journalism knowledge to examine how information can be accurately and concisely distributed.
     </p>
 
-    <h2>Experience:</h2>
+    <div class = "sectionheader">Experience:</div>
 
-    <h3>Social Media Marketing Intern</h3>
-      <h4>Blonder Tongue Laboratories, Inc.</h4>
-      <h5>June 2019 – August 2019</h5>
-      <p>I produced videos and graphics to advertise their products and training seminars on social media, and I wireframed a new ordering portal to assist establishing a new section of their website.</p>
+    <div class= "jobtitle">Social Media Marketing Intern</div>
+      <div class = "organization">Blonder Tongue Laboratories, Inc.</div>
+      <div class = "date">June 2019 – August 2019</div>
+      <p class = "description">I produced videos and graphics to advertise their products and training seminars on social media, and I wireframed a new ordering portal to assist establishing a new section of their website.</p>
 
-    <h3>Social Media and Logistics Intern</h3>
-      <h4>Washington Journalism and Media Conference</h4>
-      <h5>June 2018 - July 2018</h5>
-      <p>I customized videos and graphics for various social media platforms to promote the conference initiatives. I also coordinated various correspondent logistics including dining and transportation reservations.</p>
+    <div class= "jobtitle">Social Media and Logistics Intern</div>
+      <div class = "organization">Washington Journalism and Media Conference</div>
+      <div class = "date">June 2018 - July 2018</div>
+      <p class = "description">I customized videos and graphics for various social media platforms to promote the conference initiatives. I also coordinated various correspondent logistics including dining and transportation reservations.</p>
 
-    <h3>Media Recruitment Intern</h3>
-      <h4>Phil Murphy’s Gubernatorial Campaign</h4>
-      <h5>September 2017 – November 2017</h5>
-      <p>I revitalized social media advertisements targeting young voters and organized canvassing materials for a voter recruitment campaign.</p>
+    <div class= "jobtitle">Media Recruitment Intern</div>
+      <div class = "organization">Phil Murphy’s Gubernatorial Campaign</div>
+      <div class = "date">September 2017 – November 2017</div>
+      <p class = "description">I revitalized social media advertisements targeting young voters and organized canvassing materials for a voter recruitment campaign.</p>
 
-    <h2>Education:</h2>
-      <ul>
+    <div class = "sectionheader">Education:</div>
+      <ul id = "degrees">
         <li>Bachelor of Arts, Journalism, University of Maryland, College Park, Expected Graduation: May 2022</li>
       </ul>
 
-    <h2>Skills:</h2>
-      <ul>
+    <div class = "sectionheader">Skills:</div>
+      <ul id = "do">
       <li>Adobe Creative Cloud Suite</li>
       <li>Google Drive Programs</li>
       <li>Microsoft Office Programs</li>
@@ -61,6 +63,7 @@
       <li>Social media platforms</li>
       </ul>
 
+    </div>
   </body>
 
 
