--- a/Online Resume/index.html
+++ b/Online Resume/index.html
@@ -16,39 +16,81 @@
 
 <img src="banner.jpg" class= "banner">
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light"  >
+
+ <div class="collapse navbar-collapse" id="navbarSupportedContent">
+   <ul class="navbar-nav mx-auto" >
+     <li class="nav-item">
+       <a class="nav-link" href="#imagelink">Jenna Cohen</a>
+     </li>
+     <li class="nav-item">
+       <a class="nav-link" href="#experience">Experience</a>
+     </li>
+     <li class="nav-item">
+       <a class="nav-link" href="#education">Education</a>
+     </li>
+     <li class="nav-item">
+       <a class="nav-link" href="#skills">Skills</a>
+     </li>
+
+     </li>
+
+ </div>
+</nav>
 <div class="container">
 
     <div class="row">
 
-            <div class="col-md-3">
-                    <h3>Contact Information</h3>
-                    <p>List Info Here</p>
+
+            <div class="col-md-3"></div>
+
+            <div class="col-md-6">
+                    <h3 class="title">About Me </h3>
+                    <p>I am a journalism student studying at the University of Maryland, College Park. My strengths include video production and implementing UX strategies, as well as data and design skills. I will be using my concentration in information science to enhance my journalism knowledge to examine how information can be accurately and concisely distributed.</p>
             </div>
 
+              <div class="col-md-3"></div>
 
-            <div class="col-md-9">
-                    <h3>About Me </h3>
-                    <p>Bio goes here !!!</p>
-            </div>
+    </div>
 
+    <div class="row">
+
+      <div class="col-md-2 space">
+
+                <h3 class="title">Contact Information</h3>
+                <ul>
+                    <li class = "menu"> <a href = "mailto:jennaco@terpmail.umd.edu" target= "_blank"> Email Me </a></li>
+                    <li class = "menu"> <a href = "https://www.linkedin.com/in/jenna-cohen-037a4a185/" target= "_blank">LinkedIn</a>  </li>
+                    <li class = "menu"> <a href = "https://twitter.com/jennaco370" target= "_blank"> Twitter </a> </li>
+                    <li class = "menu"> <a href = "https://github.com/jennacohen" target= "_blank"> GitHub </a></li>
+                </ul>
+        </div>
+
+
+      <div class="col-md-8">
+        <img src="cohen.jpg" alt= "jenna image" class="image" id="imagelink">
+
+      </div>
+
+      <div class="col-md-2"></div>
 
     </div>
 
     <div class="row">
 
             <div class="col-md-4">
-                    <h3>Heading 1</h3>
+                    <h3 class="title"> <a id="experience"></a>Experience</h3>
                     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
             </div>
 
 
             <div class="col-md-4">
-                    <h3>Heading 2</h3>
+                    <h3 class="title"><a id="education"></a> Education</h3>
                     <p>Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Lorem ipsum dolor.</p>
             </div>
 
             <div class="col-md-4">
-                    <h3>Heading 3</h3>
+                    <h3 class="title"> <a id="skills"></a>Skills</h3>
                     <p>Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
             </div>
     </div>
