online resume updates

--- a/onlineresume/index.html
+++ b/onlineresume/index.html
@@ -9,14 +9,15 @@
  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
  <link rel= "stylesheet" type= "text/css" href ="style.css">
+ <link href="https://fonts.googleapis.com/css?family=Lato|Raleway&display=swap" rel="stylesheet">
 
 <title> Jenna Cohen Online Resume </title>
 
 </head>
 
 <img src="banner.jpg" class= "banner">
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light"  >
+<body>
+<nav class="navbar navbar-expand-lg navbar-light navbar-default"  >
 
  <div class="collapse navbar-collapse" id="navbarSupportedContent">
    <ul class="navbar-nav mx-auto" >
@@ -56,14 +57,6 @@
     <div class="row">
 
       <div class="col-md-2 space">
-
-                <h3 class="title">Contact Information</h3>
-                <ul>
-                    <li class = "menu"> <a href = "mailto:jennaco@terpmail.umd.edu" target= "_blank"> Email Me </a></li>
-                    <li class = "menu"> <a href = "https://www.linkedin.com/in/jenna-cohen-037a4a185/" target= "_blank">LinkedIn</a>  </li>
-                    <li class = "menu"> <a href = "https://twitter.com/jennaco370" target= "_blank"> Twitter </a> </li>
-                    <li class = "menu"> <a href = "https://github.com/jennacohen" target= "_blank"> GitHub </a></li>
-                </ul>
         </div>
 
 
@@ -76,22 +69,142 @@
 
     </div>
 
+
+    <div class="row">
+        <div class="col-md-4"> </div>
+
+        <div class="col-md-4" >
+          <h2 class= "heading"><a id="experience"></a> Experience </h2>
+        </div>
+
+        <div class="col-md-4"> </div>
+    </div>
+
     <div class="row">
 
-            <div class="col-md-4">
-                    <h3 class="title"> <a id="experience"></a>Experience</h3>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-            </div>
+      <div class="col-md-1"> </div>
+        <div class="col-md-2">
+        <h4 class="subtitle">Blonder Tongue Laboratories, Inc.</h4>
+        <p> June 2019 - August 2019 </p>
+        </div>
+
+        <div class="col-md-1"> </div>
+
+        <div class="col-md-6">
+        <h4 class="subtitle"> Social Media Marketing Intern </h4>
+        <p>I produced videos and graphics to advertise their products and training seminars on social media, and I wireframed a new ordering portal to assist establishing a new section of their website. </p>
+        </div>
+    </div>
+
+    <div class="row">
+
+      <div class="col-md-1"> </div>
+        <div class="col-md-2">
+        <h4 class="subtitle">Washington Journalism and Media Conference</h4>
+        <p> July 2018 </p>
+        </div>
+
+        <div class="col-md-1"> </div>
+
+        <div class="col-md-6">
+        <h4 class="subtitle"> Social Media and Logistics Intern </h4>
+        <p>I customized videos and graphics for various social media platforms to promote the conference initiatives. I also coordinated various correspondent logistics including dining and transportation reservations.</p>
+        </div>
+    </div>
+
+    <div class="row" >
+        <div class="col-md-4"> </div>
+
+        <div class="col-md-4" >
+          <h2 class= "heading" ><a id="education"></a> Education </h2>
+        </div>
+
+        <div class="col-md-4"> </div>
+    </div>
+
+    <div class="row">
+
+      <div class="col-md-1"> </div>
+        <div class="col-md-2">
+        <h4 class="subtitle">University of Maryland</h4>
+        <p> Expected Graduation: May 2022 </p>
+        </div>
+
+        <div class="col-md-1"> </div>
+
+        <div class="col-md-6">
+        <h4 class="subtitle"> Bachelor of Arts, Journalism </h4>
+        <p>At the Philip Merrill College of Journalism, there was a large variety in course material. I took courses such as news writing and reporting, photojournalism, interactive data and design and other courses relating to online journalism design. </p>
+        </div>
+    </div>
+
+    <div class="row">
+
+      <div class="col-md-1"> </div>
+        <div class="col-md-2">
+        <h4 class="subtitle" >South Brunswick High School</h4>
+        <p> September 2014-June 2018 </p>
+        </div>
+
+        <div class="col-md-1"> </div>
+
+        <div class="col-md-6">
+        <h4 class="subtitle"> Honors Student </h4>
+        <p>In high school, I specialized in video production all four years. After learning the basics of video, I focused on broadcast journalism, script writing, directing, and improving my editing skills. I also was a member of National, Technology, English and Social Studies Honors Societies.</p>
+        </div>
+    </div>
 
 
-            <div class="col-md-4">
-                    <h3 class="title"><a id="education"></a> Education</h3>
-                    <p>Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Lorem ipsum dolor.</p>
+    <div class="row">
+        <div class="col-md-4"> </div>
+
+        <div class="col-md-4" >
+          <h2 class= "heading"><a id="skills"></a> Skills </h2>
+        </div>
+
+        <div class="col-md-4"> </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4"> </div>
+      <div class="col-md-4">
+      <ul class="list" >
+      <li>Adobe Creative Cloud Suite</li>
+      <li>Google Drive Programs</li>
+      <li>Microsoft Office Programs</li>
+      <li>HTML(5)</li>
+      <li>CSS(3)</li>
+      <li>JavaScript</li>
+      <li>Bootstrap Framework</li>
+      <li>Social media platforms</li>
+      <li>Wireframing</li>
+      <li>Avid Media Composer</li>
+      </ul>
+      </div>
+      <div class="col-md-4"> </div>
             </div>
 
-            <div class="col-md-4">
-                    <h3 class="title"> <a id="skills"></a>Skills</h3>
-                    <p>Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+    <div class="row">
+    <div class="col-md-1"> </div>
+    <div class="col-md-10">
+            <h3 class="heading">Contact Information</h3>
+            <ul>
+                <li class = "menu"> <a href = "mailto:jennaco@terpmail.umd.edu" target= "_blank"> Email </a></li>
+                <li class = "menu"> <a href = "https://www.linkedin.com/in/jenna-cohen-037a4a185/" target= "_blank">LinkedIn</a>  </li>
+                <li class = "menu"> <a href = "https://twitter.com/jennaco370" target= "_blank"> Twitter </a> </li>
+                <li class = "menu"> <a href = "https://github.com/jennacohen" target= "_blank"> GitHub</a></li>
+            </ul>
             </div>
+      <div class="col-md-1"> </div>
+
+      </div>
+
+      <br>
+
+    <footer class= "footer">
+        Jenna Cohen -- © -- All rights reserved.
+    </footer>
     </div>
 </div>
+
+</body>
