--- a/resume-project/jenna-cohen-resume.html
+++ b/resume-project/jenna-cohen-resume.html
@@ -7,7 +7,7 @@
 
 <!--bootstrap css-->
  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
  <link rel= "stylesheet" type= "text/css" href ="style.css">
  <link href="https://fonts.googleapis.com/css?family=Lato|Raleway&display=swap" rel="stylesheet">
 
@@ -16,6 +16,7 @@
 </head>
 
 <img src="banner.jpg" class= "banner">
+
 <body>
 <nav class="navbar navbar-expand-lg navbar-light navbar-default"  >
 
@@ -185,17 +186,33 @@
             </div>
 
     <div class="row">
-    <div class="col-md-1"> </div>
-    <div class="col-md-10">
-            <h3 class="heading">Contact Information</h3>
-            <ul>
-                <li class = "menu"> <a href = "mailto:jennaco@terpmail.umd.edu" target= "_blank"> Email </a></li>
-                <li class = "menu"> <a href = "https://www.linkedin.com/in/jenna-cohen-037a4a185/" target= "_blank">LinkedIn</a>  </li>
-                <li class = "menu"> <a href = "https://twitter.com/jennaco370" target= "_blank"> Twitter </a> </li>
-                <li class = "menu"> <a href = "https://github.com/jennacohen" target= "_blank"> GitHub</a></li>
-            </ul>
+        <div class="col-md-2"> </div>
+        <div class="col-md-8">
+          <h3 class="heading">Contact Information</h3>
+        </div>
+        <div class="col-md-2"> </div>
+    </div>
+
+    <div class="row">
+
+        <div class="col-md-3">
+            <a href = "mailto:jennaco@terpmail.umd.edu" target= "_blank"> <i class="far fa-envelope-open fa-3x" style = "color: #FFAB5C"></i> </a>
+            <p class= "center"> Email </p>
+        </div>
+        <div class="col-md-3">
+            <a href = "https://www.linkedin.com/in/jenna-cohen-037a4a185/" target= "_blank"><i class="fab fa-linkedin-in fa-3x" style = "color: #FFAB5C"></i></a>
+            <p class= "center"> LinkedIn </p>
+          </div>
+          <div class="col-md-3">
+            <a href = "https://twitter.com/jennaco370" target= "_blank"> <i class="fab fa-twitter fa-3x" style = "color: #FFAB5C"></i> </a>
+            <p class= "center"> Twitter </p>
+          </div>
+          <div class="col-md-3">
+            <a href = "https://github.com/jennacohen" target= "_blank"> <i class="fab fa-github fa-3x" style = "color: #FFAB5C"></i></a>
+            <p class= "center"> GitHub </p>
+          </div>
+
             </div>
-      <div class="col-md-1"> </div>
 
       </div>
 
