--- a/midterm/index.html
+++ b/midterm/index.html
@@ -8,10 +8,11 @@
 </head>
 
 <body>
+
 <div id= "container">
 
+<img src="images/banner.png" alt="banner"  >
 
-  <img src="images/banner.png" alt="banner" class= "banner" >
 
   <h1 > Burning Man: Explained </h1>
 
