--- a/resume-project/jenna-cohen-resume.html
+++ b/resume-project/jenna-cohen-resume.html
@@ -113,6 +113,22 @@
         </div>
     </div>
 
+    <div class="row">
+
+      <div class="col-md-1"> </div>
+        <div class="col-md-2">
+        <h4 class="subtitle">Phil Murphy’s Gubernatorial Campaign</h4>
+        <p> September 2017 – November 2017</p>
+        </div>
+
+        <div class="col-md-1"> </div>
+
+        <div class="col-md-6">
+        <h4 class="subtitle"> Media Recruitment Intern </h4>
+        <p>I revitalized social media advertisements targeting young voters and organized canvassing materials for a voter recruitment campaign.</p>
+        </div>
+    </div>
+
     <div class="row" >
         <div class="col-md-4"> </div>
 
