--- a/Final Project GFX/finalgfx.html
+++ b/Final Project GFX/finalgfx.html
@@ -16,6 +16,9 @@
    <!-- Load d3.js and c3.js -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js" charset="utf-8"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.6.8/c3.min.js"></script>
+   <!-- google fonts -->
+
+   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|News+Cycle&display=swap" rel="stylesheet">
 
 <title> Data Visualization Assignment Jenna Cohen </title>
 
@@ -26,14 +29,10 @@
 
 <div class="container">
 
-<br>  <br>  <br>  <br>
-
-<h3> Data Visualization Assignment Jenna Cohen </h3>
-
   <br>  <br>  <br>  <br>
 
 <!--first graphic-->
-  <div class= "graphic-container">
+  <div id= "graphic-container">
 
     <h2> UMD Student Voting Rate vs. National Student Voting Rate</h2>
 
@@ -74,7 +73,18 @@
 
     <br>  <br>  <br>  <br>
 
+    <div>
+
+    <h2> Top 10 Congressional Districts Where Youth Might Decide the 2018 Elections </h2>
+    <em> Source: The Center for Information & Research on Civic Learning & Engagement at Tufts Tisch College of Civic Life </em>
+
+    <iframe src="https://uploads.knightlab.com/storymapjs/6a7a4c70b0a6b1804b2c2d5fb98c1f96/data-viz-assignment/index.html" frameborder="0" width="100%" height="800"></iframe>
+
+    </div>
+
 </div>
+
+<!--storymap-->
 
 
 <!-- c3 script-->
@@ -91,9 +101,11 @@
         ],
         type: 'bar'
       },
+
       color: {
         pattern: ['#2a8dc5', '#FF3127']
       }
+
     });
     //chart2
     var chart2 = c3.generate({
