--- a/final-project-GFX/index.html
+++ b/final-project-GFX/index.html
@@ -34,7 +34,7 @@
 <!--first graphic-->
   <div id= "graphic-container">
 
-    <h2> UMD Student Voting Rate vs. National Student Voting Rate</h2>
+    <h2> National Student Voting Rate vs. UMD Student Voting Rate </h2>
 
     <p> At the same level of 19.3 percent in 2014, the voting rate doubled among both University of Maryland students and students nation wide.</p>
 
