--- a/final-project-GFX/index.html
+++ b/final-project-GFX/index.html
@@ -19,6 +19,7 @@
    <!-- google fonts -->
 
    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|News+Cycle&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Oranienbaum&display=swap" rel="stylesheet">
 
 <title> Data Visualization Assignment Jenna Cohen </title>
 
