--- a/final-project-GFX/index.html
+++ b/final-project-GFX/index.html
@@ -39,6 +39,8 @@
 
     <p> At the same level of 19.3 percent in 2014, the voting rate doubled among both University of Maryland students and students nation wide.</p>
 
+    <div class="row">
+
     <div class="col-md-1"> </div>
 
     <div class="col-md-4">
@@ -53,6 +55,7 @@
 
     <div class="col-md-1"> </div>
 
+  </div>
     <em> Source: Institute for Democracy & Higher Education (IDHE) at Tufts University’s Tisch College of Civic Life and UMD Right Now. </em>
 
     </div>
@@ -105,6 +108,17 @@
 
       color: {
         pattern: ['#2a8dc5', '#FF3127']
+      },
+
+      axis: {
+        y: {
+          max: 95,
+          tick: {
+                     format: function(value){
+                         return d3.format('.2%')(value/100)
+                     }
+                 }
+        }
       }
 
     });
@@ -121,7 +135,19 @@
        },
        color: {
          pattern: ['#2a8dc5', '#FF3127']
+       },
+
+       axis: {
+         y: {
+           max: 95,
+           tick: {
+                      format: function(value){
+                          return d3.format('.2%')(value/100)
+                      }
+                  }
+         }
        }
+
      });
     //chart3
     var chart3 = c3.generate({
