--- a/multimedia-final/index.html
+++ b/multimedia-final/index.html
@@ -20,6 +20,7 @@
 
    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|News+Cycle&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Oranienbaum&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Montserrat:200,300,400,500,600,700,800|Oswald:200,300,400,500,600,700&display=swap" rel="stylesheet">
 
 <title> Multimedia Story Final Project </title>
 
@@ -30,8 +31,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
    <a class="navbar-brand" href="#">
 
-     <img src= "images/star-red.png" class= "star-top">
-     <img src= "images/star-blue.png" class= "star-top">
+     <img src= "images/white-check.png" class= "star-top">
+     <img src= "images/blue-check.png" class= "star-top">
      College Voters</a>
    </a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,20 +57,28 @@
   </nav>
   </div>
 
-
-  <center> <img src= "images/vote.jpeg" class="hero-image"> </center>
+  <section class="bgimage">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        </div>
+      </div>
+    </div>
+  </section>
 
   <div class="container">
 
-    <p class="headline"> College Voter Turnout is <span class="blue">increasing. </span> </p>
-    <p class="headline">Here's Why It Matters. </p>
+<div class= "headline-container">
+    <span class="headline"> COLLEGE VOTER TURNOUT IS </span> <br>
+      <span class="blue">INCREASING. </span> <br>
+    <span class="headline">HERE'S WHY IT MATTERS. </span>
+</div>
 
-
-  <p class= "intro-text"> As we get closer to what some would argue being the most highly anticipated presidential election in American history, an important and previously overlooked demographic is college voters.  </p>
+  <p class= "intro-text"> Many argue that the 2020 presidential election is the most highly anticipated political race in American history. To accurately predict the future of our democracy, we cannot neglect an important and previously overlooked demographic: college voters.  </p>
 
   <div class="chapterhead">
-    <img src= "images/star-red.png" class= "star-chap">
-    <img src= "images/star-blue.png" class= "star-chap">
+    <img src= "images/red-check.png" class= "star-chap">
+    <img src= "images/blue-check.png" class= "star-chap">
     <a id ="numbers">
     By the Numbers
   </a>
@@ -80,7 +89,7 @@
   <p>This matches the results found in a study done by the Institute for Democracy & Higher Education at Tufts University, which found an increase from 19.3 percent in 2014 to 40.3 percent in 2018. Based on these numbers, it is estimated at 7.5 million students voted in the 2018 midterm elections. </p>
 
 
-<!--first graphic ADD THE YEARS-->
+<!--first graphic -->
   <div id= "graphic-container">
 
     <h2> National Student Voting Rate vs. UMD Student Voting Rate </h2>
@@ -90,12 +99,14 @@
     <div class="col-md-1"> </div>
 
     <div class="col-md-4">
+      <p class="year"> 2014 </p>
       <div id="votingRateChart"></div>
     </div>
 
     <div class="col-md-1"> </div>
 
     <div class="col-md-4">
+      <p class="year"> 2018 </p>
       <div id="votingRateChart2"></div>
     </div>
 
@@ -112,13 +123,15 @@
 
       <p>"Reaching a 46 percent student voting rate during a midterm election is a huge milestone, but we're already preparing for next fall’s presidential election,” said Patrick Saumell, Student Co-Chair for the Terps Vote Coalition. </p>
 
-      <img src="images/terpsvote.jpeg" class="stack=image">
-      <p class="caption">Caption: Insert image or video above</p>
+      <img src="images/terpsvote.jpeg" class="stack-image">
+      <br>
+
+      <em>Students registering to vote at a TerpsVote marketing table. Source: edublog.news </em>
 
 
   <div class="chapterhead">
-    <img src= "images/star-red.png" class= "star-chap">
-    <img src= "images/star-blue.png" class= "star-chap">
+    <img src= "images/red-check.png" class= "star-chap">
+    <img src= "images/blue-check.png" class= "star-chap">
     <a id ="overcoming">
     Overcoming Being Overlooked
   </a>
@@ -135,22 +148,25 @@
     <div class= "graphic-container">
 
       <h2> Major Breakdown at the University of Maryland </h2>
+      <div class="row">
 
-      <p> As you can see, the top majors at the University of Maryland are within the fields of science, mathematics, and technology, so it’s necessary for the Terps Vote coalition to have a strategy to reach the students that may not feel personally invested in politics.  </p>
-
-      <div id="majorChart"></div>
-
+      <div class="col-md-2"> </div>
+      <div class="col-md-8">
+        <div id="majorChart"></div>
+        </div>
+      <div class="col-md-2"> </div>
       <em> Source: Data Collected by University of Maryland Office of Institutional Research, Planning and Assesment </em>
 
     </div>
 
 
+  <br>
 
   <p>“I think it’s really powerful what they’re doing” sophomore government and politics major Rachel Jessee said. “They’re not too in the students faces. It’s a warm welcoming environment that encourages people to vote.”</p>
 
   <div class="chapterhead">
-    <img src= "images/star-red.png" class= "star-chap">
-    <img src= "images/star-blue.png" class= "star-chap">
+    <img src= "images/red-check.png" class= "star-chap">
+    <img src= "images/blue-check.png" class= "star-chap">
     <a id ="Forward">
       Looking Forward
     </a>
@@ -164,7 +180,7 @@
 
 <p>TerpsVote announced that college voter turnout was 60 percent in the last presidential election. Following the trend of college voter increase, their goal is to have a turnout between 75 and 80 percent, Saumell said.</p>
 
-<footer class="footer"> Footer Goes Here </footer>
+<footer class="footer"> All Rights Reserved. Jenna Cohen Copyright 2019. </footer>
 
 </div>
 
