--- a/multimedia-final/index.html
+++ b/multimedia-final/index.html
@@ -273,7 +273,7 @@
             onmouseout: function (d, i) { console.log("onmouseout", d, i); }
           },
           color: {
-            pattern: ['#2a8dc5', '#455380', '#ee6a4b', '#60c4b2', '#973895']
+            pattern: ['#1B2CEB', '#FF4736', '#426CEB', '#EB1709', '#1A1AFF']
           }
         });
 
