--- a/multimedia-final/index.html
+++ b/multimedia-final/index.html
@@ -84,9 +84,9 @@
   </a>
   </div>
 
-  <p>In last years midterm elections, University of Maryland’s students voting rate increased to 46 percent, from a rate of 19.3 percent in 2014, according to a campus report. </p>
+  <p>In last years midterm elections, University of Maryland’s students voting rate increased to 46 percent, from a rate of 19.3 percent in 2014, according to a <a target= "_blank" href= "https://umdrightnow.umd.edu/news/student-voter-participation-university-maryland-increased-27-percent-2018"> campus report.</a> </p>
 
-  <p>This matches the results found in a study done by the Institute for Democracy & Higher Education at Tufts University, which found an increase from 19.3 percent in 2014 to 40.3 percent in 2018. Based on these numbers, it is estimated at 7.5 million students voted in the 2018 midterm elections. </p>
+  <p>This matches the results found in a study done by the <a target="_blank" href="https://idhe.tufts.edu" >Institute for Democracy & Higher Education at Tufts University</a>, which found an increase from 19.3 percent in 2014 to 40.3 percent in 2018. Based on these numbers, it is estimated at 7.5 million students voted in the 2018 midterm elections. </p>
 
 
 <!--first graphic -->
@@ -119,9 +119,15 @@
 
     <br>  <br>
 
-      <p>At the University of Maryland, the Terps Vote coalition takes pride in this increase, and hopes to continue the rise of college students that vote in local, state, and national elections.</p>
+      <p>At the University of Maryland, the <a target="_blank" href="https://terplink.umd.edu/organization/terpsvote-coalition"> TerpsVote Coalition </a> takes pride in this increase, and hopes to continue the rise of college students that vote in local, state, and national elections.</p>
 
-      <p>"Reaching a 46 percent student voting rate during a midterm election is a huge milestone, but we're already preparing for next fall’s presidential election,” said Patrick Saumell, Student Co-Chair for the Terps Vote Coalition. </p>
+      <br>
+
+      <blockquote id="pullquote">“They’re the face of the next generation. They’re the face of change.”</blockquote>
+
+      <br>
+
+      <p>"Reaching a 46 percent student voting rate during a midterm election is a huge milestone, but we're already preparing for next fall’s presidential election,” said Patrick Saumell, Student Co-Chair for the TerpsVote Coalition. </p>
 
       <img src="images/terpsvote.jpeg" class="stack-image">
       <br>
@@ -137,11 +143,15 @@
   </a>
   </div>
 
-  <p>One of the biggest issues college voter advocacy organizations face is voter apathy. When asked about how Terps Vote combats problems of voter apathy, Samuell said they key is in making voting relatable to everyone.</p>
+  <p>One of the biggest issues college voter advocacy organizations face is voter apathy. When asked about how TerpsVote combats problems of voter apathy, Samuell said they key is in making voting relatable to everyone.</p>
 
   <p>“To use an example, for students in science and mathematics, a lot of the research opportunities are tied to federal funding. So then we try to put it in terms of that so something that will directly impact them and show them how voting, can actually have a direct impact on things that they care about” Saumell said.</p>
 
-  <p>The top majors at the University of Maryland are within the fields of science, mathematics, and technology, so it’s necessary for the Terps Vote coalition to have a strategy to reach the students that may not feel personally invested in politics.</p>
+  <p> The University of Maryland has over 800 student groups on campus, constantly advertising their initiatives, so it's vital that TerpsVote has a strategy to ensure their marketing efforts stand out and reach students all across campus.</p>
+
+  <p> “I think it’s really powerful what they’re doing” sophomore government and politics major Rachel Jessee said. “They’re not too in the students faces. It’s a warm welcoming environment that encourages people to vote.”</p>
+
+  <p>The top majors at the University of Maryland are within the fields of science, mathematics, and technology, so it’s necessary for the TerpsVote Coalition to have a strategy to reach the students that may not feel personally invested in politics.</p>
 
 
   <!--second graphic-->
@@ -162,7 +172,7 @@
 
   <br>
 
-  <p>“I think it’s really powerful what they’re doing” sophomore government and politics major Rachel Jessee said. “They’re not too in the students faces. It’s a warm welcoming environment that encourages people to vote.”</p>
+
 
   <div class="chapterhead">
     <img src= "images/red-check.png" class= "star-chap">
