--- a/multimedia-final/index.html
+++ b/multimedia-final/index.html
@@ -147,6 +147,14 @@
 
   <p>“To use an example, for students in science and mathematics, a lot of the research opportunities are tied to federal funding. So then we try to put it in terms of that so something that will directly impact them and show them how voting, can actually have a direct impact on things that they care about” Saumell said.</p>
 
+  <img src="images/stampvoter.jpeg" class="stack-image">
+
+  <br>
+
+  <em>Students voting at the Stamp Student Union at the University of Maryland. Source: The Diamondback </em>
+
+  <br>
+
   <p> The University of Maryland has over 800 student groups on campus, constantly advertising their initiatives, so it's vital that TerpsVote has a strategy to ensure their marketing efforts stand out and reach students all across campus.</p>
 
   <p> “I think it’s really powerful what they’re doing” sophomore government and politics major Rachel Jessee said. “They’re not too in the students faces. It’s a warm welcoming environment that encourages people to vote.”</p>
