--- a/multimedia-final/index.html
+++ b/multimedia-final/index.html
@@ -154,6 +154,7 @@
   <em>Students voting at the Stamp Student Union at the University of Maryland. Source: The Diamondback </em>
 
   <br>
+  <br>
 
   <p> The University of Maryland has over 800 student groups on campus, constantly advertising their initiatives, so it's vital that TerpsVote has a strategy to ensure their marketing efforts stand out and reach students all across campus.</p>
 
@@ -291,7 +292,7 @@
             onmouseout: function (d, i) { console.log("onmouseout", d, i); }
           },
           color: {
-            pattern: ['#1B2CEB', '#FF4736', '#426CEB', '#EB1709', '#1A1AFF']
+            pattern: ['#2021CC', '#8CCBFF', '#FFFFFF', '#FF1A13', '#8E1B01']
           }
         });
 
