--- a/multimedia-final/index.html
+++ b/multimedia-final/index.html
@@ -76,6 +76,17 @@
 
   <p class= "intro-text"> Many argue that the 2020 presidential election is the most highly anticipated political race in American history. To accurately predict the future of our democracy, we cannot neglect an important and previously overlooked demographic: college voters.  </p>
 
+  <br>
+
+  <img src="images/voting-groups.jpg" class="stack-image">
+
+  <br>
+
+  <em>University of Maryland students tabling to encourage voter registration. Source: Unwind Magazine </em>
+
+  <br>
+  <br>
+
   <div class="chapterhead">
     <img src= "images/red-check.png" class= "star-chap">
     <img src= "images/blue-check.png" class= "star-chap">
