--- a/multimedia-final/index.html
+++ b/multimedia-final/index.html
@@ -97,7 +97,7 @@
 
   <p>In last years midterm elections, University of Maryland’s students voting rate increased to 46 percent, from a rate of 19.3 percent in 2014, according to a <a target= "_blank" href= "https://umdrightnow.umd.edu/news/student-voter-participation-university-maryland-increased-27-percent-2018"> campus report.</a> </p>
 
-  <p>This matches the results found in a study done by the <a target="_blank" href="https://idhe.tufts.edu" >Institute for Democracy & Higher Education at Tufts University</a>, which found an increase from 19.3 percent in 2014 to 40.3 percent in 2018. Based on these numbers, it is estimated at 7.5 million students voted in the 2018 midterm elections. </p>
+  <p>This matches the results found in a study done by the <a target="_blank" href="https://idhe.tufts.edu" >Institute for Democracy & Higher Education at Tufts University</a>, which found an increase from 19.3 percent in 2014 to 40.3 percent in 2018. Based on these numbers, it is estimated that 7.5 million students voted in the 2018 midterm elections. </p>
 
 
 <!--first graphic -->
@@ -130,7 +130,7 @@
 
     <br>  <br>
 
-      <p>At the University of Maryland, the <a target="_blank" href="https://terplink.umd.edu/organization/terpsvote-coalition"> TerpsVote Coalition </a> takes pride in this increase, and hopes to continue the rise of college students that vote in local, state, and national elections.</p>
+      <p>At the University of Maryland, the <a target="_blank" href="https://terplink.umd.edu/organization/terpsvote-coalition"> TerpsVote Coalition </a> takes pride in this increase, and hopes to continue the rise of college students that vote in local, state, and national elections.</p>. The TerpsVote Coalition is a group of students, staff, and faculty who seek to increase UMD student participation in local, state, and national elections. Their goal? To provide students and teachers the resources to be civically engaged.
 
       <br>
 
@@ -154,22 +154,9 @@
   </a>
   </div>
 
-  <p>One of the biggest issues college voter advocacy organizations face is voter apathy. When asked about how TerpsVote combats problems of voter apathy, Samuell said they key is in making voting relatable to everyone.</p>
+  <p>One of the biggest issues college voter advocacy organizations face is voter apathy. When asked about how TerpsVote combats problems of voter apathy, Samuell said they key is  making voting relatable to everyone.</p>
 
   <p>“To use an example, for students in science and mathematics, a lot of the research opportunities are tied to federal funding. So then we try to put it in terms of that so something that will directly impact them and show them how voting, can actually have a direct impact on things that they care about” Saumell said.</p>
-
-  <img src="images/stampvoter.jpeg" class="stack-image">
-
-  <br>
-
-  <em>Students voting at the Stamp Student Union at the University of Maryland. Source: The Diamondback </em>
-
-  <br>
-  <br>
-
-  <p> The University of Maryland has over 800 student groups on campus, constantly advertising their initiatives, so it's vital that TerpsVote has a strategy to ensure their marketing efforts stand out and reach students all across campus.</p>
-
-  <p> “I think it’s really powerful what they’re doing” sophomore government and politics major Rachel Jessee said. “They’re not too in the students faces. It’s a warm welcoming environment that encourages people to vote.”</p>
 
   <p>The top majors at the University of Maryland are within the fields of science, mathematics, and technology, so it’s necessary for the TerpsVote Coalition to have a strategy to reach the students that may not feel personally invested in politics.</p>
 
@@ -189,7 +176,19 @@
 
     </div>
 
+  <br>
 
+  <p> The University of Maryland has over 800 student groups on campus, constantly advertising their initiatives, so it's vital that TerpsVote has a strategy to ensure their marketing efforts stand out and reach students all across campus.</p>
+
+  <p> “I think it’s really powerful what they’re doing” sophomore government and politics major Rachel Jessee said. “They’re not too in the students faces. It’s a warm welcoming environment that encourages people to vote.”</p>
+
+  <img src="images/stampvoter.jpeg" class="stack-image">
+
+  <br>
+
+  <em>Students voting at the Stamp Student Union at the University of Maryland. Source: The Diamondback </em>
+
+  <br>
   <br>
 
 
