--- a/multimedia-final/index.html
+++ b/multimedia-final/index.html
@@ -130,7 +130,7 @@
 
     <br>  <br>
 
-      <p>At the University of Maryland, the <a target="_blank" href="https://terplink.umd.edu/organization/terpsvote-coalition"> TerpsVote Coalition </a> takes pride in this increase, and hopes to continue the rise of college students that vote in local, state, and national elections.</p>. The TerpsVote Coalition is a group of students, staff, and faculty who seek to increase UMD student participation in local, state, and national elections. Their goal? To provide students and teachers the resources to be civically engaged.
+      <p>At the University of Maryland, the <a target="_blank" href="https://terplink.umd.edu/organization/terpsvote-coalition"> TerpsVote Coalition </a> takes pride in this increase, and hopes to continue the rise of college students that vote in local, state, and national elections. The TerpsVote Coalition is a group of students, staff, and faculty who seek to increase UMD student participation in local, state, and national elections. Their goal? To provide students and teachers the resources to be civically engaged.</p>
 
       <br>
 
