--- a/multimedia-final/index.html
+++ b/multimedia-final/index.html
@@ -201,13 +201,13 @@
     </a>
   </div>
 
-<p>As the primaries for the Democratic nomination fast approaching, Terps Vote is utilizing campus marketing resources, orientation presentations, and speaking in introductory university courses to encourage students to register to vote as well as provide the tools so they can better understand the voting process.</p>
+<p>As the primaries for the Democratic nomination are quickly approaching, Terps Vote is utilizing campus marketing resources, orientation presentations, and speaking in introductory university courses to encourage students to register to vote. They are also working to  provide the tools students need so they can better understand the voting process.</p>
 
 <p>“With the primary, there's lower voter turnout, so there’s a bigger chance for college aged voters to make a difference,” Saumell said.</p>
 
 <p>Many students share the sentiment of optimism when looking ahead to the impact college voters will have on the 2020 election. “They’re the face of the next generation. They’re the face of change” Hannah Wood, junior government and politics major said.</p>
 
-<p>TerpsVote announced that college voter turnout was 60 percent in the last presidential election. Following the trend of college voter increase, their goal is to have a turnout between 75 and 80 percent, Saumell said.</p>
+<p>TerpsVote announced that campus voter turnout was 60 percent in the last presidential election. Following the trend of college voter increase, their goal is to have a campus turnout between 75 and 80 percent, Saumell said.</p>
 
 <footer class="footer"> All Rights Reserved. Jenna Cohen Copyright 2019. </footer>
 
