--- a/multimedia-final/index.html
+++ b/multimedia-final/index.html
@@ -74,6 +74,8 @@
     <span class="headline">HERE'S WHY IT MATTERS. </span>
 </div>
 
+  <p class= "intro-text"> by Jenna Cohen </p>
+  <br>
   <p class= "intro-text"> Many argue that the 2020 presidential election is the most highly anticipated political race in American history. To accurately predict the future of our democracy, we cannot neglect an important and previously overlooked demographic: college voters.  </p>
 
   <br>
@@ -209,7 +211,7 @@
 
 <p>TerpsVote announced that campus voter turnout was 60 percent in the last presidential election. Following the trend of college voter increase, their goal is to have a campus turnout between 75 and 80 percent, Saumell said.</p>
 
-<footer class="footer"> All Rights Reserved. Jenna Cohen Copyright 2019. </footer>
+<footer class="footer"> All Rights Reserved. <a target="_blank" href="https://jennacohen.github.io/Jenna-Cohen-Jour352/resume-project/jenna-cohen-resume.html"> Jenna Cohen </a> Copyright 2019. </footer>
 
 </div>
 
