--- a/resume-project/jenna-cohen-resume.html
+++ b/resume-project/jenna-cohen-resume.html
@@ -83,6 +83,55 @@
 
     <div class="row">
 
+          <div class="col-md-1"> </div>
+            <div class="col-md-2">
+            <h4 class="subtitle"> Gamma Phi Beta Sorority </h4>
+            <p> November 2019 - Present </p>
+            </div>
+
+            <div class="col-md-1"> </div>
+
+            <div class="col-md-6">
+            <h4 class="subtitle"> Public Relations Vice President </h4>
+            <p>I supervise the work of all public relations department officers through leading department meetings, monitoring the department budget and communicating regularly with officers. In this role I also contribute to weekly executive board meetings and report to general members during chapter meetings, and oversee the planning and execution of all social media, philanthropic and alumnae activities. </p>
+            </div>
+        </div>
+
+
+    <div class="row">
+
+      <div class="col-md-1"> </div>
+        <div class="col-md-2">
+        <h4 class="subtitle">Unwind Magazine</h4>
+        <p> August 2019 - Present </p>
+        </div>
+
+        <div class="col-md-1"> </div>
+
+        <div class="col-md-6">
+        <h4 class="subtitle"> Social Team Manager </h4>
+        <p> I organize a timeline to post articles on our website and social media platforms and compose original headlines and graphics to accompany articles. </p>
+        </div>
+    </div>
+
+    <div class="row">
+
+      <div class="col-md-1"> </div>
+        <div class="col-md-2">
+        <h4 class="subtitle"> Leadership and Community Service Learning</h4>
+        <p> August 2019 - Present </p>
+        </div>
+
+        <div class="col-md-1"> </div>
+
+        <div class="col-md-6">
+        <h4 class="subtitle"> Student Marketing Assistant </h4>
+        <p>I write and design a weekly newsletter to inform readers of office events and programs, and design custom graphics for various leadership and community service programs. I also update the office website content and design to increase usability.</p>
+        </div>
+    </div>
+
+    <div class="row">
+
       <div class="col-md-1"> </div>
         <div class="col-md-2">
         <h4 class="subtitle">Blonder Tongue Laboratories, Inc.</h4>
