--- a/resume-project/jenna-cohen-resume.html
+++ b/resume-project/jenna-cohen-resume.html
@@ -93,7 +93,7 @@
 
             <div class="col-md-6">
             <h4 class="subtitle"> Public Relations Vice President </h4>
-            <p>I supervise the work of all public relations department officers through leading department meetings, monitoring the department budget and communicating regularly with officers. In this role I also contribute to weekly executive board meetings and report to general members during chapter meetings, and oversee the planning and execution of all social media, philanthropic and alumnae activities. </p>
+            <p>I supervise the work of all public relations department officers through leading department meetings, monitoring the department budget and communicating regularly with officers. In this role I also contribute to weekly executive board meetings and report to general members during chapter meetings. I also oversee the planning and execution of all social media, philanthropic and alumnae activities. </p>
             </div>
         </div>
 
